# AdaptLIL

./: .gitignore  AdaptationOutput_1720925701655.txt  README.md  User 1_fixations.csv  allclasses-index.html  allpackages-index.html  classifier results.txt  constant-values.html  element-list  env.yaml  fixation_mouseclick_predictions_no_metadata.arff  gaze data notes.txt  help-doc.html  index.html  index.md  member-search-index.js  output.arff  output_stream_test.txt  overview-summary.html  overview-tree.html  package-search-index.js  pom.xml  rec_command_test.txt  rec_command_test_2.txt  type-search-index.js
python/: FlaskServer.py  Readme.md  convert.py  main.py  main_channels_last.py  modelEvalScript.py  model_conf.py  model_helper.py  model_train.py  pyproject.toml  tranformer_classes.py  vimain.py
python/2023-10-16 14_01_57,071300/: output.txt
python/2023-10-16 14_08_54,961023/: output.txt
python/2023-10-16 14_11_38,299481/: output.txt
python/2023-10-16 14_14_12,086662/: output.txt
python/2023-10-16 14_47_53,393161/: output.txt
python/2023-10-16 19_34_19,680437/: new 1.txt  new 2.txt  new 3.txt  output.txt
python/2023-10-16 20_47_29,531973/: output.txt
python/2023-10-16 23_38_17,261751/: output.txt
python/2023-10-16 23_44_22,235698/: output.txt
python/2023-10-16 23_45_13,922590/: output.txt
python/2023-10-17 00_06_05,188679/: output.txt
python/2023-10-17 00_25_42,532630/: output.txt
python/2023-10-17 00_29_36,934682/: output.txt
python/2023-10-17 00_43_16,052031/: output.txt
python/2023-10-17 00_50_23,054537/: output.txt
(+844 files in other folders)
