[tool.poetry]
name = "adaptlil-python"
version = "0.1.0"
description = ""
authors = ["Nicholas Chow <34703898+Kali-Zoidberg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.8.2"
tensorflow-gpu = "2.8.2"
flask = "^3.0.3"
flask-script = "^2.0.6"
gevent = "^24.2.1"
numpy = '<2'
protobuf ="<3.20"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
